syntax="proto3";

package crud_service;
option go_package="genproto/crud_service";

message ListReq {
    int64 limit = 1;
    int64 page = 2;
}

message Post {
    int64 id = 1;
    int64 user_id = 2;
    string title = 3;
    string body = 4;
}

message UpdatePost {
    int64 user_id = 1;
    string title = 2;
    string body = 3;
}

message ListRespPost {
    repeated Post posts = 1;
    int64 total = 2;
}

message ById {
    int64 id = 1;
}
